force-app/main/default/objects/Visita__c/Visita__c.object-meta.xml
<CustomObject>
    <label>Visita</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Nº da Visita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visitas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>