force-app/main/default/objects/Visita__c/fields/Concorr_ncia__c.field-meta.xml
<CustomField>
    <fullName>Concorr_ncia__c</fullName>
    <formula>Text( Oportunidade__r.Marca_do_concorrente__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concorrência</label>
    <type>Text</type>
</CustomField>