force-app/main/default/objects/Visita__c/fields/Contato_respons_vel__c.field-meta.xml
<CustomField>
    <fullName>Contato_respons_vel__c</fullName>
    <label>Contato responsável</label>
    <length>255</length>
    <type>Text</type>
</CustomField>