force-app/main/default/objects/Visita__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Email do executivo de vendas</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>