force-app/main/default/objects/Visita__c/fields/Executivo_de_vendas__c.field-meta.xml
<CustomField>
    <fullName>Executivo_de_vendas__c</fullName>
    <label>Executivo de vendas</label>
    <referenceTo>Executivo_de_vendas__c</referenceTo>
    <relationshipLabel>Visitas</relationshipLabel>
    <relationshipName>Visitas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>