force-app/main/default/objects/Visita__c/fields/Gerenciador_de_risco__c.field-meta.xml
<CustomField>
    <fullName>Gerenciador_de_risco__c</fullName>
    <formula>Text( Oportunidade__r.Gerenciador_de_risco__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gerenciador de risco</label>
    <type>Text</type>
</CustomField>