force-app/main/default/objects/Visita__c/fields/ID_da_oportunidade__c.field-meta.xml
<CustomField>
    <fullName>ID_da_oportunidade__c</fullName>
    <formula>Oportunidade__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ID da oportunidade</label>
    <type>Text</type>
</CustomField>