force-app/main/default/objects/Visita__c/fields/ja_e_cliente__c.field-meta.xml
<CustomField>
    <fullName>ja_e_cliente__c</fullName>
    <label>Já é cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>