force-app/main/default/objects/Visita__c/fields/Local__c.field-meta.xml
<CustomField>
    <fullName>Local__c</fullName>
    <formula>Oportunidade__r.Account.BillingStreet +&#39;,&#39;+&#39; &#39;+  
 Oportunidade__r.Account.BillingPostalCode +&#39;,&#39;+&#39; &#39;+ 
 Oportunidade__r.Account.BillingCity +&#39;,&#39;+&#39; &#39;+ 
 Oportunidade__r.Account.BillingState</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Local</label>
    <type>Text</type>
</CustomField>