force-app/main/default/objects/Visita__c/fields/Possui_indicador__c.field-meta.xml
<CustomField>
    <fullName>Possui_indicador__c</fullName>
    <label>Possui indicador</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sim</fullName>
            </value>
            <value>
                <fullName>Não</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>