force-app/main/default/objects/Visita__c/fields/Prospec_o_para_quantas_pe_as__c.field-meta.xml
<CustomField>
    <fullName>Prospec_o_para_quantas_pe_as__c</fullName>
    <label>Prospecção para quantas peças</label>
    <length>255</length>
    <type>Text</type>
</CustomField>