force-app/main/default/objects/Visita__c/fields/Status_da_visita__c.field-meta.xml
<CustomField>
    <fullName>Status_da_visita__c</fullName>
    <label>Status da visita</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agendada</fullName>
                <default>true</default>
                <label>Agendada</label>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
            <value>
                <fullName>Realizada</fullName>
            </value>
            <value>
                <fullName>Reagendada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>