force-app/main/default/objects/Visita__c/fields/Tipo_de_Equipamento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Equipamento__c</fullName>
    <label>Tipo de Equipamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>